# rquest-util

./: Cargo.toml  README.md  replace.ps1
.claude/: settings.local.json
examples/: advanced.rs  check_curves.rs  chrome_vs_safari.rs  compile_test.rs  debug_akamai.rs  emulation.rs  extension_analysis.rs  firefox_145_debug.rs  firefox_debug.rs  firefox_fingerprint_test.rs  ja3_compare.rs  quick_test.rs  safari_debug.rs  safari_final_test.rs  safari_fingerprint_test.rs  test_browserleaks.rs  test_ff128.rs  test_fromstr.rs
src/emulation/: mod.rs  rand.rs
src/emulation/device/: curves.rs  macros.rs  mod.rs
src/emulation/device/chrome/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/firefox/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/okhttp/: mod.rs
src/emulation/device/opera/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/safari/: header.rs  http2.rs  mod.rs  tls.rs
tests/: emulation_firefox.rs  test_fromstr.rs
tests/support/: mod.rs
